add: 并行执行器